--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@ body {
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
-  font-smoothing: antialiased;
   font-weight: 300;
 }
 
@@ -64,10 +63,25 @@ body {
   color: inherit;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
-  font-smoothing: antialiased;
   font-weight: 300;
   outline: none;
+}
 
+.edit{
+  padding: 16px 16px 16px 60px;
+  border: none;
+  background: rgba(0, 0, 0, 0.003);
+  box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
+  width: 480px;
+  font-size: 24px;
+  font-family: inherit;
+  font-weight: inherit;
+  line-height: 1.4em;
+  color: inherit;
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  font-weight: 300;
+  outline: none;
 }
 
 .main {
@@ -196,9 +210,9 @@ body {
 }
 
 
-.todo-list li .edit {
+/* .todo-list li .edit {
   display: none;
-}
+} */
 
 .todo-list li.editing:last-child {
   margin-bottom: -1px;
